# ida-multi-mcp

./: .gitignore  README.md  pyproject.toml
bench/similarity/corpus/: families.yaml
bench/similarity/harness/: neural_cross_instance.py  neural_xc_disasm.py  report.py  run_ablation.py  run_cross_instance.py  run_live_eval.py  validate_neural_integration.py
bench/similarity/livetest/: simbench.c  simbench.gt.json  simbench_v2.c  simbench_v2.gt.json  simbench_v2_clang.gt.json  simbench_v3.c  simbench_v3.gt.json
bench/similarity/neural/: jtrans_probe.py  probe.py
docs/plans/function-similarity/: 01-v1-production-design.md  02-evaluation-design.md  03-implementation-handoff.md  04-neural-semantic-track.md  EVAL-LOG.md  README.md
docs/superpowers/plans/: 2026-07-08-neural-embedding-scalability-plan.md
docs/superpowers/specs/: 2026-07-08-neural-embedding-scalability-design.md
src/ida_multi_mcp/: __main__.py  filelock.py  health.py  ida_tool_schemas.json  idalib_manager.py  idalib_worker.py  registry.py  router.py  server.py
src/ida_multi_mcp/ida_mcp/: __init__.py  api_analysis.py  api_core.py  api_similarity.py  http.py  utils.py
tests/: test_architecture_fixes.py  test_filelock.py  test_health.py  test_http_cors.py  test_idalib_manager.py  test_index_store.py  test_install_idempotent.py  test_install_robustness.py  test_jtrans_norm.py  test_lazy_cache_init.py  test_neural_backend.py  test_registry.py  test_router.py  test_server_integration.py  test_sim_score.py  test_similarity.py  test_similarity_neural.py  test_utils_pure.py  test_zeromcp_parity.py
(+10 files in other folders)
