[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-multi-mcp"
version = "0.1.0"
description = "Multi-instance IDA Pro MCP server for simultaneous reverse engineering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
idalib = [
    "idapro>=0.0.7",
]
# Optional neural BCSD recall (jTrans embeddings). Model downloads on demand to
# ~/.ida-mcp/models/; enable at runtime with IDA_MCP_SIM_NEURAL=1.
neural = [
    "torch>=2.0",
    "transformers>=4.30",
]

[project.scripts]
ida-multi-mcp = "ida_multi_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ida_multi_mcp*"]

[tool.setuptools.package-data]
ida_multi_mcp = ["vendor/**/*", "ida_tool_schemas.json", "tools/jtrans_tokenizer/*"]
